# quant_radar

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  SKILL.md  TOOLS.md  docker-compose.yml  pyproject.toml
plan/: PROGRESS.md  plan.yaml
quant_radar/: __init__.py
quant_radar-ui/: .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
quant_radar-ui/src/: App.js  App.tsx  main.js  main.tsx
quant_radar-ui/src/api/: cards.js  cards.ts  client.js  client.ts  data.js  data.ts
quant_radar-ui/src/components/: CardGrid.js  CardGrid.tsx  DashboardTabs.js  DashboardTabs.tsx  EnlargeModal.tsx  Sidebar.js  Sidebar.tsx  TerminalPanel.tsx
quant_radar-ui/src/components/cards/: AnalysisCard.tsx  ChartCard.js  ChartCard.tsx  GenericCard.js  GenericCard.tsx  NewsCard.tsx  SentimentCard.tsx  TableCard.tsx
quant_radar-ui/src/lib/: indicators.ts  labels.ts  query.js  refresh.tsx  types.js  types.ts
quant_radar-ui/src/styles/: globals.css
quant_radar-ui/src/types/: plotly.d.ts
quant_radar-ui/tests/e2e/: helpers.ts  visual.spec.ts
quant_radar/analytics/: __init__.py  indicators.py  ma.py  patterns.py  regime.py  returns.py  vision.py
quant_radar/cache/: __init__.py  store.py
quant_radar/cards/: __init__.py  spec.py  store.py
quant_radar/core/: __init__.py  config.py  types.py
quant_radar/server/: __init__.py  main.py  schemas.py
quant_radar/server/routes/: cards.py  data.py  health.py  sources.py
quant_radar/sources/: __init__.py  alphavantage_src.py  apewisdom_src.py  base.py  base_source.py  binance_src.py  catalog.py  cme_futures_src.py  coinpaprika_src.py  etf_aum_src.py  finnhub_src.py  fred_src.py  gdelt_src.py  hydrate.py  kind_coverage.py  kind_relationships.py  marketaux_src.py  openbb_src.py  polygon_src.py  tradingeconomics_src.py  yfinance_src.py
quant_radar/tools/: __init__.py  analytics.py  calendar.py  cards.py  compat.py  dataframe.py  etfs.py  futures.py  governance.py  news.py  patterns.py  sentiment.py  sources_meta.py
quant_radar/ui/: app.py  data.py  render.py
scripts/: e2e_demo.py  e2e_full.py  e2e_server.py  generate_tools_doc.py  integration_audit.py  openbb-mcp.sh  probe_etf_coverage.py  probe_gdelt.py  probe_history.py  scaffold_source.py  start_app.sh  start_dev.sh  visual_e2e.sh
tests/: test_binance.py  test_cache.py  test_cards.py  test_catalog.py  test_indicators.py  test_kind_relationships.py  test_ma.py  test_news.py  test_patterns.py  test_returns.py  test_sentiment_combo.py  test_server.py  test_skill_md_sync.py  test_smoke.py  test_sources.py  test_tools_analytics.py  test_tools_doc_sync.py  test_ui_render.py
