[project]
name = "quant-radar"
version = "0.1.0"
description = "AI-native market research dashboard with chat-driven cards"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "pandas>=2.2",
    "pyarrow>=15.0",
    "platformdirs>=4.0",
    "yfinance>=0.2.40",
    "requests>=2.32",
    "streamlit>=1.40",
    "plotly>=5.24",
    "streamlit-autorefresh>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "responses>=0.25",
    "ruff>=0.6",
    "pyright[nodejs]>=1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "network: hits real network/API; skipped by default",
]
addopts = "-m 'not network'"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["quant_radar"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pyright]
typeCheckingMode = "basic"
pythonVersion = "3.11"
include = ["quant_radar", "tests"]
venvPath = "."
venv = ".venv"
