[project]
name = "quant-radar"
version = "0.1.0"
description = "AI-native market research dashboard with chat-driven cards"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "pandas>=2.2",
    "pyarrow>=15.0",
    "platformdirs>=4.0",
    "yfinance>=0.2.40",
    "requests>=2.32",
    "scipy>=1.13",
    "matplotlib>=3.9",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    # OpenBB Platform — meta-source for ~100 vetted financial data providers.
    # Bundled package brings all providers + the high-level obb.* API. Adds
    # ~311MB to the image. The trade-off vs selective install was that selective
    # only ships fetcher classes, not the unified obb.equity.price.historical()
    # surface our adapters delegate to. Worth the size.
    "openbb>=4.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "responses>=0.25",
    "httpx>=0.27",
    "ruff>=0.6",
    "pyright[nodejs]>=1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "network: hits real network/API; skipped by default",
]
addopts = "-m 'not network'"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["quant_radar"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.ruff.lint.per-file-ignores]
# Operational demo / probe scripts — long printf-style lines are fine.
"scripts/*.py" = ["E501"]

[tool.pyright]
typeCheckingMode = "basic"
pythonVersion = "3.11"
include = ["quant_radar", "tests"]
venvPath = "."
venv = ".venv"
